WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179559
[Service Workers] Activate algorithm says terminate the active worker if it exists
https://bugs.webkit.org/show_bug.cgi?id=179559
Summary
[Service Workers] Activate algorithm says terminate the active worker if it e...
Chris Dumez
Reported
2017-11-10 16:09:55 PST
Activate algorithm says terminate the active worker if it exists: -
https://w3c.github.io/ServiceWorker/#activation-algorithm
(Step 2.1)
Attachments
Patch
(2.26 KB, patch)
2017-11-10 16:11 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-11-10 16:11:39 PST
Created
attachment 326649
[details]
Patch
WebKit Commit Bot
Comment 2
2017-11-12 22:39:17 PST
Comment on
attachment 326649
[details]
Patch Clearing flags on attachment: 326649 Committed
r224741
: <
https://trac.webkit.org/changeset/224741
>
WebKit Commit Bot
Comment 3
2017-11-12 22:39:19 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-11-15 09:35:10 PST
<
rdar://problem/35562009
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug