[Service Workers] Activate algorithm says terminate the active worker if it exists https://bugs.webkit.org/show_bug.cgi?id=179559

Reviewed by Darin Adler.

Activate algorithm says terminate the active worker if it exists:
- https://w3c.github.io/ServiceWorker/#activation-algorithm (Step 2.1)

No new tests, no-op for now as the terminate() function is not implemented
yet.

* workers/service/server/SWServerJobQueue.cpp:
(WebCore::SWServerJobQueue::activate):


Canonical link: https://commits.webkit.org/195628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224741 268f45cc-cd09-0410-ab3c-d52691b4dbfc